fix menu on home page and dark mode switch

--- a/docs/css/extra.css
+++ b/docs/css/extra.css
@@ -42,7 +42,7 @@
     --md-default-fg-color--light: rgba(0, 0, 0, 0.54);
     --md-default-fg-color--lighter: rgba(0, 0, 0, 0.32);
     --md-default-fg-color--lightest: rgba(0, 0, 0, 0.07);
-    --md-default-bg-color: #fff;
+    --md-default-bg-color: hsla(0, 0%, 85%, 1);
     --md-default-bg-color--light: hsla(0, 0%, 80%, 1);
     --md-default-bg-color--lighter: hsla(0, 0%, 70%, 1);
     --md-default-bg-color--lightest: hsl(0, 0%, 60%, 1);
